<resources>
    <string name="app_name">Artist App</string>
    <string name="txtSplash">The Mantra House</string>
    <string name="btBack">Back</string>
    <string name="btBack2">Back</string>
    <string name="btBack3">Back</string>
    <string name="btBack4">Back</string>
    <string name="btLotto">Lottery Probability</string>
    <string name="btBio">Biography</string>
    <string name="btAbout">About Us</string>
    <string name="btResult">Results</string>
    <string name="Description">Lingard</string>
    <string name="Description2">Close Up</string>
    <string name="Description3">Back to Main Activity</string>
    <string name="Description5">Back to Biography</string>
    <string name="Description4">Side Shot</string>
    <string name="Description6">Go to Facebook Page</string>
    <string name="Description7">Go to Instagram Page</string>
    <string name="Description8">Go to YouTube Page</string>
    <string name="Description9">Go to Web Page</string>
    <string name="Description10">Number of tickets</string>
    <string name="Description11">If you buy </string>
    <string name="Description12"> you have a chance to win 2 VIP Tickets</string>
    <string name="Description13"> chance to win!</string>
    <string name="Description14">amount of tickets,</string>
    <string name="tvTickets2">Total Tickets Purchase</string>
    <string name="tvTickets3">amount needed</string>
    <string name="tvTickets4">Percentage needed</string>
    <string name="tvTitle1">Welcome to the Mantra House</string>
    <string name="tvTitle2">Lottery Probability</string>
    <string name="tvTitle3">Probability Results</string>
    <string name="tvTitle4">Biography</string>
    <string name="tvTitle5">About Us</string>
    <string name="tvTitle6">Lingard is an artist based in Atlanta and loves to make music. Lingard Graduated form the Los Angeles
    Film school and continued his studies in Full Sale to become even more proficient to his craft. Now he is helping young talent to come up
    and to be heard.</string>
    <string name="tvTitle7">Welcome to The House, where every aspect of your sound finds its true home. In the complex world of music creation, artists often juggle multiple collaborations with producers, engineers, and
        graphic designers to bring their vision to life. At The Mantra House, we simplify that journey by offering a one-stop destination for all your creative needs. Here, you have seamless access to expert guidance and
        innovative solutions—all under one roof. Let us help you transform your ideas into reality, while you focus on what you do best: MAKING MUSIC.</string>
    <string name="tvTitle8">Socials</string>
    <string name="tvTitle9">Play The Doubt Song</string>
    <string name="tvTitle10">Play The First Date Song</string>
    <string name="tvTitle11">Sample Music</string>
    <string name="tvTitle12">Lottery Probability</string>
    <string name="tvTitle13">How many tickets did you Purchase?</string>
    <string name="tvTitle14">Probability Results</string>
</resources>